<!-- Layout for Date and Time selection page-->
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@android:color/darker_gray"

    android:clickable="true"
    android:focusable="true"
    tools:context=".DateTimeFragment">

    <include layout="@layout/reusable_top_section_layout"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/custom_date_time_background"
        android:padding="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginHorizontal="10dp"
        android:gravity="center">

        <!-- Section Title Display-->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/date_and_time"
            android:textSize="24sp"
            android:textStyle="bold"/>
"

        <!-- Date Input Display-->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/rounded_gray_background"
            android:hint="@string/order_date">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:clickable="true"
                android:background="@android:color/transparent"
                android:inputType="none" />

        </com.google.android.material.textfield.TextInputLayout>

        <!-- Time Input Display -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/rounded_gray_background"
            android:hint="@string/order_time">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:clickable="true"
                android:background="@android:color/transparent"
                android:inputType="none" />

        </com.google.android.material.textfield.TextInputLayout>

        <!-- Confirm Date and Time Button -->
        <Button
            android:id="@+id/confirmDateTimeButton"
            android:layout_width="match_parent"
            android:layout_marginTop="10dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/confirm_date_and_time"
            app:backgroundTint="@null"
            android:background="@drawable/custom_confirm_date_time_disabled_background"
            android:textColor="@color/lightgray"
            android:clickable="false"/>
    </LinearLayout>

</LinearLayout>
